--- a/notebooks/pyro_hmm_discrete.ipynb
+++ b/notebooks/pyro_hmm_discrete.ipynb
@@ -44,6 +44,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$transition = [0.1, 0.7]$ <br>\n",
+    "$emission = [0.9, 0.6]$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
